@@ -41,6 +41,7 @@ Bugfixes:
 - send correct timestamps if seeking beyond end of file (Jira APPSERVER-54)
 - fixed NoSuchElementException when iterating connections during disconnect
   (Jira APPSERVER-94)
+- reference bugs im AMF3 decoder fixed (Jira APPSERVER-95)
 
 
 Red5 0.6rc2 (2007-02-12)
